# img2tga

./: CMakeLists.txt  LICENSE  README.md
.github/workflows/: release.yaml
src/: main.cpp
